# cmake-cpp-lib

./: CMakeLists.txt  foo.pc.in
